--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "my-koyeb-api",
+  "name": "puppeteer-api",
   "version": "1.0.0",
-  "description": "A simple Node.js API running on Koyeb",
+  "description": "A Puppeteer API to scrape URLs and extract redirects",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=18.0.0"
+    "express": "^4.18.2",
+    "puppeteer": "^22.3.0",
+    "puppeteer-extra": "^3.3.6",
+    "puppeteer-extra-plugin-stealth": "^2.9.0"
   }
 }
